examples/valid/assignment.ra
func my_function(): void {
  b = 2;
}

func main(): void {
  a = 1;
  global c = 2;
  print(a, c);
}
