examples/invalid/static/missing-return-if.ra
func test(): int {
  if (1 < 2) {
    return 1;
  }
}

func main(): void {
  a = test();
  print(a);
}
